Login action - first part of behat login feature + Routing refactor + Security for /admin

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.en.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.en.yml
@@ -6,3 +6,8 @@ nucms:
         page: Page
         pages: Pages
         title: Title
+
+sylius:
+    form:
+        user:
+            email: Login
