--- a/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.pl.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.pl.yml
@@ -6,3 +6,8 @@ nucms:
         page: Strona
         pages: Strony
         title: Tytuł
+
+sylius:
+    form:
+        user:
+            email: Login
