Create translatable admin entity and configurate locale management for web/admin

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.en.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.en.yml
@@ -6,6 +6,8 @@ nucms:
         page: Page
         pages: Pages
         title: Title
+        locale:
+            name: Name
 
 sylius:
     form:
