UIkit - login page

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.en.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.en.yml
@@ -8,6 +8,9 @@ nucms:
         title: Title
         locale:
             name: Name
+        login:
+            login: Log in
+            header: nucms
 
 sylius:
     form:
