Create test for logout

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.en.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.en.yml
@@ -10,6 +10,7 @@ nucms:
             name: Name
         login:
             login: Log in
+            logout: Log out
             header: nucms
 
 sylius:
