--- a/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.pl.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.pl.yml
@@ -10,6 +10,7 @@ nucms:
             name: Nazwa
         login:
             login: Zaloguj
+            logout: Wyloguj
             header: nucms
 
 sylius:
