--- a/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.pl.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.pl.yml
@@ -12,6 +12,11 @@ nucms:
             login: Zaloguj
             logout: Wyloguj
             header: nucms
+        menu:
+            label: Menu
+            items:
+                dashboard: Panel
+                pages: Strony
 
 sylius:
     form:
