Add content field to page entity

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.en.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.en.yml
@@ -10,6 +10,8 @@ nucms:
         edit: Edit
         locales: Locales
         createdAt: Created at
+        title: Title
+        content: Content
         locales_fields:
             name: Name
         login:
