Add delete button to page CRUD

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.en.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.en.yml
@@ -8,6 +8,7 @@ nucms:
         title: Title
         create: Create
         edit: Edit
+        delete: Delete
         locales: Locales
         createdAt: Created at
         title: Title
