--- a/src/Nugato/Bundle/NuCmsBundle/Resources/translations/flashes.pl.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/translations/flashes.pl.yml
@@ -3,4 +3,10 @@
 
 sylius:
     resource:
-        update: 'Dane zostały zaktualizowane.'
+        create: 'Element %resource% został pomyślnie utworzony.'
+        update: 'Dane zostały pomyślnie zapisane.'
+        delete: 'Element %resource% został pomyślnie usunięty.'
+
+# resources
+Page: Strona
+Locale: Język
