Add slug to the page

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.en.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.en.yml
@@ -13,6 +13,7 @@ nucms:
         createdAt: Created at
         title: Title
         content: Content
+        slug: Slug
         locales_fields:
             name: Name
         login:
