--- a/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.pl.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.pl.yml
@@ -13,6 +13,7 @@ nucms:
         createdAt: Utworzono
         title: Tytuł
         content: Treść
+        slug: Adres URL
         locales_fields:
             name: Nazwa
         login:
