--- a/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.en.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.en.yml
@@ -26,6 +26,8 @@ nucms:
                 dashboard: Dashboard
                 pages: Pages
                 locales: Locales
+                taxons: Categories
+        taxons: Categories
 
 sylius:
     form:
