--- a/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.pl.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.pl.yml
@@ -26,6 +26,8 @@ nucms:
                 dashboard: Panel
                 pages: Strony
                 locales: Języki
+                taxons: Kategorie
+        taxons: Kategorie
 
 sylius:
     form:
