Change admin template to bootstrap 4

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.en.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.en.yml
@@ -9,6 +9,7 @@ nucms:
         create: Create
         edit: Edit
         delete: Delete
+        save: Save
         locales: Locales
         createdAt: Created at
         title: Title
