--- a/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.pl.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.pl.yml
@@ -9,6 +9,7 @@ nucms:
         create: Utwórz
         edit: Edytuj
         delete: Usuń
+        save: Zapisz
         locales: Języki
         createdAt: Utworzono
         title: Tytuł
