--- a/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.pl.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.pl.yml
@@ -6,6 +6,7 @@ nucms:
         page: Strona
         pages: Strony
         title: Tytuł
+        name: Nazwa
         create: Utwórz
         edit: Edytuj
         delete: Usuń
