Create navigation admin panel

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.en.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.en.yml
@@ -16,6 +16,7 @@ nucms:
         title: Title
         content: Content
         slug: Slug
+        url: Adres URL
         code: Code
         created_at: Created at
         updated_at: Updated at
