--- a/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.pl.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.pl.yml
@@ -16,6 +16,7 @@ nucms:
         title: Tytuł
         content: Treść
         slug: Adres URL
+        url: Adres URL
         code: Kod
         created_at: Utworzono
         updated_at: Zaktualizowano
