Front locale switcher

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.en.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.en.yml
@@ -42,6 +42,9 @@ nucms:
                 files: Files
         taxons: Categories
 
+    web:
+        search: Search
+
 sylius:
     form:
         user:
