--- a/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.pl.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.pl.yml
@@ -42,6 +42,9 @@ nucms:
                 files: Pliki
         taxons: Kategorie
 
+    web:
+        search: Szukaj
+
 sylius:
     form:
         user:
