Add options templates for page

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.en.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.en.yml
@@ -45,6 +45,9 @@ nucms:
                 files: Files
                 settings: Settings
         taxons: Categories
+        page_templates:
+            default: Domyślny
+            contact: Kontakt
     form:
         settings:
             type:
