--- a/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.pl.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.pl.yml
@@ -15,7 +15,6 @@ nucms:
         save: Zapisz
         locales: Języki
         createdAt: Utworzono
-        title: Tytuł
         content: Treść
         slug: Adres URL
         url: Adres URL
@@ -45,6 +44,9 @@ nucms:
                 files: Pliki
                 settings: Ustawienia
         taxons: Kategorie
+        page_templates:
+            default: Domyślny
+            contact: Kontakt
     web:
         contact_with_us: Skontaktuj się z nami
         search: Szukaj
