Add translation for contact form

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.en.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.en.yml
@@ -60,6 +60,7 @@ nucms:
         contact: Contact
         form:
             contact_form:
+                subject: Contact form
                 name: Name
                 phone: Phone
                 email: E-mail
