--- a/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.pl.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.pl.yml
@@ -27,6 +27,8 @@ nucms:
         file: Plik
         files: Pliki
         type: Typ
+        meta_title: SEO - tytuł
+        meta_description: SEO - opis
         locales_fields:
             name: Nazwa
         login:
@@ -54,6 +56,7 @@ nucms:
         contact: Kontakt
         form:
             contact_form:
+                subject: Formularz kontaktowy
                 name: Imię
                 phone: Telefon
                 email: E-mail
