Add taxons many to many to posts

--- a/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.en.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.en.yml
@@ -31,6 +31,7 @@ nucms:
         meta_description: SEO - description
         blog: Blog
         blog_posts: Blog - Posts
+        main_taxon: Main category
         locales_fields:
             name: Name
         login:
