--- a/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.en.yml
+++ b/src/Nugato/Bundle/NuCmsBundle/Resources/translations/messages.en.yml
@@ -29,6 +29,13 @@ nucms:
         type: Type
         meta_title: SEO - title
         meta_description: SEO - description
+        blog: Blog
+        blog_posts: Blog - Posts
+        main_taxon: Main category
+        image: Image
+        short_description: Short description
+        read_more: Read more
+        return: Return
         locales_fields:
             name: Name
         login:
@@ -40,6 +47,7 @@ nucms:
             items:
                 dashboard: Dashboard
                 pages: Pages
+                blog_posts: Blog - posts
                 locales: Locales
                 taxons: Categories
                 navigations: Navigations
